# Changelog

Jumpcut predates the widespread adoption of semantic versioning; as such,
pre-1.0 releases are numbered as 0.XX.

## [0.71] - 2019-09-19
### Fixed
- Display resolution changes now trigger adjustments to bezel size and
positioning, meaning that Jumpcut does not need to be restarted to have
a normal bezel after adding or removing a monitor.
- The version of ShortcutRecorder used by Jumpcut was too old to have Mojave
styling or Dark Mode support; some assets have been brought back from the
upstream project to provide this. Snow Leopard styling has been dropped. The
recorder is now legible in Dark Mode.
- Removed some blank Info.plist values causing problems in Activity Monitor;
Jumpcut was not displaying or displaying with no listed name, just the icon.
- Edge case: typing the active hotkey while _setting_ the hotkey no longer
activates the bezel.
- Very large clippings (such as Moby Dick) no longer cause discernable lag
time when viewed in the bezel
- Sparkle auto-updater now runs properly on launch if the checkbox has been
checked. (Previously, due to a misreading of the Sparkle docs, it was not
activating.)
### Changed
- Jumpcut now targets versions of macOS/OS X 10.11 (El Capitan) and later
- Minimum number of clips to remember is now a more sane 10 instead of 1

## [0.70] - 2019-09-01
### Fixed
- 64-bit compatible; now runs without warning under Mojave
- Corrected behavior for Command-V emission on non-American keyboards
- Known transient sources of content (such as TypeIt4Me and TextExpander) are now ignored
- Rewrote Launch on Login to support modern macOS requirements
### Added
- Restored “Clear All” menu item
- Accessibility entailment for modern macOS security concerns
- Retina-ready “Jumpcut logo” menu bar icon
- Dark mode support for menu bar icon
- Option to ignore known sources of sensitive data, such as KeePassXC or 1Password
### Removed
- Dropped (regrettably) outdated German and French localizations
- Support for pre-High Sierra macOS